few form changes

--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -1,6 +1,6 @@
 .outline {
   height: 85vh;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .header {
@@ -25,7 +25,7 @@
 }
 
 .custom-wrapper {
-  width: calc(100%/3);
+  width: calc(100% / 3);
   padding: 10px;
 }
 
