--- a/src/app/shared/components/modal/modal.component.html
+++ b/src/app/shared/components/modal/modal.component.html
@@ -3,13 +3,47 @@
   <mat-card-header class="mb-3">
     <mat-card-title>Employee Form</mat-card-title>
   </mat-card-header>
-  <mat-card-content>
+  <mat-card-content [formGroup]="form">
     <mat-form-field class="mat-card-input">
       <mat-label>Name</mat-label>
-      <input type="text" matInput placeholder="Your name..." />
+      <input
+        type="text"
+        matInput
+        placeholder="Your name..."
+        formControlName="name"
+      />
+    </mat-form-field>
+    <mat-form-field class="mat-card-input">
+      <mat-label>Employee code</mat-label>
+      <input
+        type="text"
+        matInput
+        placeholder="Your name..."
+        formControlName="id"
+      />
+    </mat-form-field>
+    <mat-form-field class="mat-card-input">
+      <mat-label>Age</mat-label>
+      <input
+        type="number"
+        matInput
+        placeholder="Your name..."
+        formControlName="age"
+      />
+    </mat-form-field>
+    <mat-form-field class="mat-card-input">
+      <mat-label>Blood Group</mat-label>
+      <input
+        type="text"
+        matInput
+        placeholder="Your name..."
+        formControlName="bloodGroup"
+      />
     </mat-form-field>
   </mat-card-content>
   <mat-card-actions class="mat-card-footer">
-    <button mat-raised-button color="primary">Submit</button>
+    <button mat-raised-button color="primary" type="submit" (click)="submit()">
+      Submit
+    </button>
   </mat-card-actions>
 </mat-card>
